--- a/src/style.css
+++ b/src/style.css
@@ -19,9 +19,10 @@ body {
   background-color: var(--White);
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   min-height: 100vh;
-  margin: 0;
+  max-width: 850px;
+  margin: 0 auto;
 }
 
 p,
