--- a/src/style.css
+++ b/src/style.css
@@ -79,19 +79,19 @@ button {
 }
 
 .cell.hit {
-  background-color: gray;
+  background-color: #a1a1a1;
 }
 
 .cell.ship {
-  background-color: blue;
+  background-color: #4c4cc5;
 }
 
 .cell.ship.hit {
-  background-color: red;
+  background-color: #e43e3e;
 }
 
 .cell.ship.sunk {
-  background-color: black;
+  background-color: #363636;
 }
 
 .info-container {
@@ -100,8 +100,9 @@ button {
 }
 
 button {
-  background-color: green;
+  background-color: rgb(29, 158, 104);
   color: white;
+  font-weight: 700;
   border: none;
   border-radius: 4px;
   padding: 8px;
