--- a/src/style.css
+++ b/src/style.css
@@ -46,8 +46,18 @@ button {
 
 .left,
 .right {
+  display: flex;
+  flex-direction: column;
   max-width: 250px;
   width: 100%;
+}
+
+.left {
+  align-items: end;
+}
+
+.right {
+  align-items: start;
 }
 
 .boards-container {
