--- a/public/css/style.css
+++ b/public/css/style.css
@@ -36,11 +36,17 @@ h1 {
   font-size: 1.5rem;
 }
 
-h2 {
-  font-size: 1.2rem;
+.title {
+  text-align: center;
 }
 
 button {
+  background-color: rgb(29, 158, 104);
+  color: white;
+  font-weight: 700;
+  border: none;
+  border-radius: 4px;
+  padding: 8px;
   cursor: pointer;
 }
 
@@ -49,35 +55,12 @@ button.hidden,
   display: none;
 }
 
-.left,
-.right {
+.gameboards-container {
   display: flex;
-  flex-direction: column;
-  max-width: 250px;
+  max-width: 800px;
   width: 100%;
-}
-
-.left {
-  align-items: end;
-}
-
-.right {
-  align-items: start;
   justify-content: space-between;
-}
-
-.boards-container {
-  display: flex;
-  flex: 1;
-  flex-direction: column;
-  justify-content: space-between;
-}
-
-.gameboard-container {
-  display: flex;
-  flex-direction: column;
   align-items: center;
-  gap: 25px;
 }
 
 .board {
@@ -99,25 +82,11 @@ button.hidden,
   padding-right: 8px;
 }
 
-.gameboard-container.small .board {
-  grid-template: repeat(10, 20px) / repeat(10, 20px);
-}
-
-.gameboard-container.small .board .column,
-.gameboard-container.small .board .row,
-.gameboard-container.small .board .offset {
-  display: none;
-}
-
 .cells {
   grid-area: 2 / 2 / -1 / -1;
   display: grid;
   grid-template: repeat(10, auto) / repeat(10, auto);
   gap: 1px;
-}
-
-.gameboard-container.small .board .cells {
-  grid-area: 1 / 1 / -1 / -1;
 }
 
 .cell {
@@ -138,20 +107,6 @@ button.hidden,
 
 .cell.ship.sunk {
   background-color: #363636;
-}
-
-.info-container {
-  display: flex;
-  gap: 16px;
-}
-
-button {
-  background-color: rgb(29, 158, 104);
-  color: white;
-  font-weight: 700;
-  border: none;
-  border-radius: 4px;
-  padding: 8px;
 }
 
 .ships {
