--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,7 +18,10 @@ body {
   color: var(--White);
   background-color: var(--White);
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
+  gap: 5rem;
   min-height: 100vh;
   background-color: #232830;
   margin: 0;
@@ -38,6 +41,7 @@ h1 {
 
 .title {
   text-align: center;
+  margin-bottom: 1rem;
 }
 
 button {
