--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,22 +10,35 @@
   font-family: monospace;
 
   /* Colors */
-  --Black: #25272c;
-  --White: #fafafa;
+  --primary-color: #429c65;
+  --black-color: #25272c;
+  --white-color: #fafafa;
 }
 
 body {
-  color: var(--White);
-  background-color: var(--White);
+  color: var(--white-color);
+  background-color: var(--white-color);
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 5rem;
   min-height: 100vh;
   background-color: #232830;
   margin: 0;
-  padding: 45px 0;
+}
+
+main {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  gap: 5rem;
+}
+
+footer {
+  padding: 2rem 0;
 }
 
 p,
@@ -57,6 +70,12 @@ button {
 button.hidden,
 .gameboard-container.hidden {
   display: none;
+}
+
+a {
+  color: var(--primary-color);
+  text-decoration: none;
+  font-weight: 700;
 }
 
 .gameboards-container {
