--- a/public/css/style.css
+++ b/public/css/style.css
@@ -52,11 +52,6 @@ h1 {
   font-size: 1.5rem;
 }
 
-.title {
-  text-align: center;
-  margin-bottom: 1rem;
-}
-
 button {
   background-color: rgb(29, 158, 104);
   color: white;
@@ -84,6 +79,13 @@ a {
   width: 100%;
   justify-content: space-between;
   align-items: center;
+}
+
+.gameboard {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
 }
 
 .board {
